src/grammar/.antlr/HLangParser.py
# Generated from /home/chieens/hlang-compiler/src/grammar/HLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HLangParser ( Parser ):

    grammarFileName = "HLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'bool'", "'break'", "'const'", "'continue'", 
                     "'if'", "'else'", "'false'", "'true'", "'float'", "'for'", 
                     "'func'", "'in'", "'int'", "'let'", "'return'", "'string'", 
                     "'void'", "'while'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
                     "'||'", "'!'", "'='", "'->'", "'>>'", "'.'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "':'" ]

    symbolicNames = [ "<INVALID>", "BOOL", "BREAK", "CONST", "CONTINUE", 
                      "IF", "ELSE", "FALSE", "TRUE", "FLOAT", "FOR", "FUNC", 
                      "IN", "INT", "LET", "RETURN", "STRING", "VOID", "WHILE", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "EQUAL", "NOT_EQUAL", 
                      "LT", "GT", "LTE", "GTE", "AND", "OR", "NOT", "ASSIGN", 
                      "ARROW", "PIPELINE", "DOT", "LRB", "RRB", "LCB", "RCB", 
                      "LSB", "RSB", "COMMA", "SEMICOLON", "COLON", "ID", 
                      "INT_LIT", "DEC", "BIN", "OCT", "HEX", "FLOAT_LIT", 
                      "STR_LIT", "SINGLE_COMMENT", "MULTI_COMMENT", "WS", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_const_decl = 1
    RULE_func_decl = 2
    RULE_parameter_list = 3
    RULE_parameter = 4
    RULE_type_spec = 5
    RULE_return_type = 6
    RULE_primitive_type = 7
    RULE_array_type = 8
    RULE_statement = 9
    RULE_var_decl = 10
    RULE_assignment_stmt = 11
    RULE_lvalue = 12
    RULE_if_stmt = 13
    RULE_while_stmt = 14
    RULE_for_stmt = 15
    RULE_return_stmt = 16
    RULE_break_stmt = 17
    RULE_continue_stmt = 18
    RULE_expression_stmt = 19
    RULE_block_stmt = 20
    RULE_expression = 21
    RULE_pipeline_expr = 22
    RULE_logical_or_expr = 23
    RULE_logical_and_expr = 24
    RULE_equality_expr = 25
    RULE_relational_expr = 26
    RULE_additive_expr = 27
    RULE_multiplicative_expr = 28
    RULE_unary_expr = 29
    RULE_type_keyword = 30
    RULE_argument_list = 31
    RULE_postfix_expr = 32
    RULE_type_keyword_func = 33
    RULE_array_access = 34
    RULE_literal = 35
    RULE_bool_literal = 36
    RULE_array_literal = 37

    ruleNames =  [ "program", "const_decl", "func_decl", "parameter_list", 
                   "parameter", "type_spec", "return_type", "primitive_type", 
                   "array_type", "statement", "var_decl", "assignment_stmt", 
                   "lvalue", "if_stmt", "while_stmt", "for_stmt", "return_stmt", 
                   "break_stmt", "continue_stmt", "expression_stmt", "block_stmt", 
                   "expression", "pipeline_expr", "logical_or_expr", "logical_and_expr", 
                   "equality_expr", "relational_expr", "additive_expr", 
                   "multiplicative_expr", "unary_expr", "type_keyword", 
                   "argument_list", "postfix_expr", "type_keyword_func", 
                   "array_access", "literal", "bool_literal", "array_literal" ]

    EOF = Token.EOF
    BOOL=1
    BREAK=2
    CONST=3
    CONTINUE=4
    IF=5
    ELSE=6
    FALSE=7
    TRUE=8
    FLOAT=9
    FOR=10
    FUNC=11
    IN=12
    INT=13
    LET=14
    RETURN=15
    STRING=16
    VOID=17
    WHILE=18
    ADD=19
    SUB=20
    MUL=21
    DIV=22
    MOD=23
    EQUAL=24
    NOT_EQUAL=25
    LT=26
    GT=27
    LTE=28
    GTE=29
    AND=30
    OR=31
    NOT=32
    ASSIGN=33
    ARROW=34
    PIPELINE=35
    DOT=36
    LRB=37
    RRB=38
    LCB=39
    RCB=40
    LSB=41
    RSB=42
    COMMA=43
    SEMICOLON=44
    COLON=45
    ID=46
    INT_LIT=47
    DEC=48
    BIN=49
    OCT=50
    HEX=51
    FLOAT_LIT=52
    STR_LIT=53
    SINGLE_COMMENT=54
    MULTI_COMMENT=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HLangParser.EOF, 0)

        def const_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.Const_declContext)
            else:
                return self.getTypedRuleContext(HLangParser.Const_declContext,i)


        def func_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.Func_declContext)
            else:
                return self.getTypedRuleContext(HLangParser.Func_declContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_program




    def program(self):

        localctx = HLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 76
                self.const_decl()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 82
                self.func_decl()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self.match(HLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(HLangParser.CONST, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(HLangParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(HLangParser.Type_specContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_const_decl




    def const_decl(self):

        localctx = HLangParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_const_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(HLangParser.CONST)
            self.state = 91
            self.match(HLangParser.ID)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 92
                self.match(HLangParser.COLON)
                self.state = 93
                self.type_spec()


            self.state = 96
            self.match(HLangParser.ASSIGN)
            self.state = 97
            self.expression()
            self.state = 98
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(HLangParser.FUNC, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def LRB(self):
            return self.getToken(HLangParser.LRB, 0)

        def RRB(self):
            return self.getToken(HLangParser.RRB, 0)

        def ARROW(self):
            return self.getToken(HLangParser.ARROW, 0)

        def return_type(self):
            return self.getTypedRuleContext(HLangParser.Return_typeContext,0)


        def LCB(self):
            return self.getToken(HLangParser.LCB, 0)

        def RCB(self):
            return self.getToken(HLangParser.RCB, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(HLangParser.Parameter_listContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(HLangParser.StatementContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_func_decl




    def func_decl(self):

        localctx = HLangParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(HLangParser.FUNC)
            self.state = 101
            self.match(HLangParser.ID)
            self.state = 102
            self.match(HLangParser.LRB)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==46:
                self.state = 103
                self.parameter_list()


            self.state = 106
            self.match(HLangParser.RRB)
            self.state = 107
            self.match(HLangParser.ARROW)
            self.state = 108
            self.return_type()
            self.state = 109
            self.match(HLangParser.LCB)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.statement() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 116
            self.match(HLangParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ParameterContext)
            else:
                return self.getTypedRuleContext(HLangParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.COMMA)
            else:
                return self.getToken(HLangParser.COMMA, i)

        def getRuleIndex(self):
            return HLangParser.RULE_parameter_list




    def parameter_list(self):

        localctx = HLangParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.parameter()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==43:
                self.state = 119
                self.match(HLangParser.COMMA)
                self.state = 120
                self.parameter()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(HLangParser.Type_specContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_parameter




    def parameter(self):

        localctx = HLangParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(HLangParser.ID)
            self.state = 127
            self.match(HLangParser.COLON)
            self.state = 128
            self.type_spec()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(HLangParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(HLangParser.Array_typeContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_type_spec




    def type_spec(self):

        localctx = HLangParser.Type_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type_spec)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 9, 13, 16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 130
                self.primitive_type()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(HLangParser.Primitive_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(HLangParser.Array_typeContext,0)


        def VOID(self):
            return self.getToken(HLangParser.VOID, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_return_type




    def return_type(self):

        localctx = HLangParser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_type)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 9, 13, 16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.primitive_type()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.array_type()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 136
                self.match(HLangParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(HLangParser.INT, 0)

        def FLOAT(self):
            return self.getToken(HLangParser.FLOAT, 0)

        def BOOL(self):
            return self.getToken(HLangParser.BOOL, 0)

        def STRING(self):
            return self.getToken(HLangParser.STRING, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_primitive_type




    def primitive_type(self):

        localctx = HLangParser.Primitive_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_primitive_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 74242) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(HLangParser.LSB, 0)

        def type_spec(self):
            return self.getTypedRuleContext(HLangParser.Type_specContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def INT_LIT(self):
            return self.getToken(HLangParser.INT_LIT, 0)

        def RSB(self):
            return self.getToken(HLangParser.RSB, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_array_type




    def array_type(self):

        localctx = HLangParser.Array_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(HLangParser.LSB)
            self.state = 142
            self.type_spec()
            self.state = 143
            self.match(HLangParser.SEMICOLON)
            self.state = 144
            self.match(HLangParser.INT_LIT)
            self.state = 145
            self.match(HLangParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(HLangParser.Var_declContext,0)


        def assignment_stmt(self):
            return self.getTypedRuleContext(HLangParser.Assignment_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(HLangParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(HLangParser.While_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(HLangParser.For_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(HLangParser.Return_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(HLangParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(HLangParser.Continue_stmtContext,0)


        def expression_stmt(self):
            return self.getTypedRuleContext(HLangParser.Expression_stmtContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(HLangParser.Block_stmtContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_statement




    def statement(self):

        localctx = HLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.assignment_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.if_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.while_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.for_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 152
                self.return_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 153
                self.break_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 154
                self.continue_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 155
                self.expression_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 156
                self.block_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET(self):
            return self.getToken(HLangParser.LET, 0)

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(HLangParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def COLON(self):
            return self.getToken(HLangParser.COLON, 0)

        def type_spec(self):
            return self.getTypedRuleContext(HLangParser.Type_specContext,0)


        def getRuleIndex(self):
            return HLangParser.RULE_var_decl




    def var_decl(self):

        localctx = HLangParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(HLangParser.LET)
            self.state = 160
            self.match(HLangParser.ID)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==45:
                self.state = 161
                self.match(HLangParser.COLON)
                self.state = 162
                self.type_spec()


            self.state = 165
            self.match(HLangParser.ASSIGN)
            self.state = 166
            self.expression()
            self.state = 167
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lvalue(self):
            return self.getTypedRuleContext(HLangParser.LvalueContext,0)


        def ASSIGN(self):
            return self.getToken(HLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(HLangParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(HLangParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return HLangParser.RULE_assignment_stmt




    def assignment_stmt(self):

        localctx = HLangParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.lvalue()
            self.state = 170
            self.match(HLangParser.ASSIGN)
            self.state = 171
            self.expression()
            self.state = 172
            self.match(HLangParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(HLangParser.ID, 0)

        def array_access(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.Array_accessContext)
            else:
                return self.getTypedRuleContext(HLangParser.Array_accessContext,i)


        def getRuleIndex(self):
            return HLangParser.RULE_lvalue




    def lvalue(self):

        localctx = HLangParser.LvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_lvalue)
        self._la = 0 # Token type
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.match(HLangParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(HLangParser.ID)
                self.state = 177 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 176
                    self.array_access()
                    self.state = 179 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==41):
                        break

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.IF)
            else:
                return self.getToken(HLangParser.IF, i)

        def LRB(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.LRB)
            else:
                return self.getToken(HLangParser.LRB, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(HLangParser.ExpressionContext,i)


        def RRB(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.RRB)
            else:
                return self.getToken(HLangParser.RRB, i)

        def block_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HLangParser.Block_stmtContext)
            else:
                return self.getTypedRuleContext(HLangParser.Block_stmtContext,i)


        def ELSE(self, i:int=None):
            if i is None:
                return self.getTokens(HLangParser.ELSE)
            else:
                return self.getToken(HLangParser.ELSE, i)
